[package]
name = "timer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
parking_lot = "0.12.5"
rustc-hash = "2.1.1"
crossbeam = "0.8"
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }

[[bench]]
name = "service_benchmark"
harness = false
