[package]
name = "kestrel-protocol-timer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
parking_lot = "0.12.5"
rustc-hash = "2.1.1"
futures = "0.3"
smallvec = "1.15.1"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }

[[bench]]
name = "service_benchmark"
harness = false

[[bench]]
name = "wheel_benchmark"
harness = false
